# is515-case-group1

./: .gitignore  README.md  main.py  pyproject.toml
Insights/: duration_prediction.ipynb  duration_prediction.py  insights.ipynb
bpnm/: SRM-Process.bpmn  SRM-Sub-Process.bpmn
data_overview/: data_overview.ipynb
insights/: duration_prediction.ipynb  resources.ipynb  vendor.ipynb
insights/outputs/: shap_feature_groups.csv
process-discovery/: conformance_checking.ipynb  findings.md
process-discovery/bpnm/: Case Study - Purchase2Pay - AsIs.bpmn  CaseStudy-To-Be-Process-without-sub.bpmn  Purchase-2-Pay-CaseStudy-tobe.bpmn
