[project]
name = "is515-case-group1"
version = "0.1.0"
description = "Group project for is515"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pm4py>=2.5.0",
  "pandas>=2.0",
  "numpy>=1.24",
  "graphviz>=0.20",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "jupyter>=1.0",
  "ipykernel",
  "rustxes>=0.2.10",
  "ipywidgets>=8.1.7",
]
